fixing overflow

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ input[type='number']::-webkit-outer-spin-button {
   color: var(--light-color);
 }
 .row {
-  width: 70%;
+  width: 77%;
 }
 /* Showcase */
 #showcase {
@@ -198,9 +198,7 @@ button {
     padding: 0;
     
   }
-  .showcase-content {
-    overflow: scroll;
-  }
+  
   .input-group-text,
   .results-input-group-text {
     
@@ -217,6 +215,7 @@ button {
     width: 20%;
 
   }
+  
   .input-group{
     display: flex;
     flex-direction: column;
@@ -224,6 +223,8 @@ button {
   }
   #showcase .showcase-content {
     width: 100%;
+    overflow: auto;
+
   }
   input::placeholder {
     font-size: 1rem;
